# cabal-extras

./: .gitignore  .stylish-haskell.yaml  .travis.yml  Makefile  README.md  build-in-docker.sh  cabal.haskell-ci  cabal.project  cabal.project.local.sample  hie.yaml
.github/workflows/: haskell-ci.yml
cabal-bundler/: cabal-bundler.cabal
cabal-bundler/cli/: Main.hs
cabal-bundler/data/: single.nix
cabal-bundler/fixtures/: cabal-fmt.plan.json  derivation.nix  fetch-with-curl.sh  openbsd-ports.txt
cabal-bundler/src/: CabalBundler.hs
cabal-bundler/src/CabalBundler/: Curl.hs  ExeOption.hs  Main.hs  NixBase32.hs  NixSingle.hs  OpenBSD.hs
cabal-bundler/src/CabalBundler/NixSingle/: Input.hs  Template.hs
cabal-bundler/tests/: Tests.hs
cabal-bundler/tmp/: fake-package.cabal
cabal-core-inspection/: README.md  cabal-core-inspection.cabal
cabal-core-inspection/cli/: Main.hs
cabal-core-inspection/example/: cabal-core-inspection-examples.cabal  cabal.project  example.sh
cabal-core-inspection/example/src/: Example.hs  GenericEq.hs
cabal-core-inspection/src/CabalCoreInspection/: GHC.hs  Main.hs
cabal-core-inspection/src/CabalCoreInspection/GHC/: DynFlags.hs  Show.hs
cabal-deps/: cabal-deps.cabal
cabal-deps/cli/: Main.hs
cabal-deps/src/CabalDeps/: Main.hs
cabal-diff/: LICENSE  cabal-diff.cabal  peura
cabal-diff/cli/: Main.hs
cabal-diff/fixtures/: colour-2.3.4.golden  colour-2.3.5.golden  foldable1.golden  foldable1.txt  optics-core.golden  optics-core.txt  resolv.golden  resolv.txt  servant.golden  servant.txt  singletons.golden  singletons.txt  vec.golden  vec.txt
cabal-diff/src/CabalDiff/: Diff.hs  Hoogle.hs  Main.hs
cabal-diff/test/: Golden.hs
cabal-docspec/: .gitignore  Changelog.md  MANUAL.md  Makefile  cabal-docspec.1  cabal-docspec.cabal
cabal-docspec/cli/: Main.hs
cabal-docspec/cpphs/: cpphs.cabal
cabal-docspec/cpphs/Language/Preprocessor/Cpphs/: MacroPass.hs  Options.hs  ReadFirst.hs  RunCpphs.hs
cabal-docspec/src/CabalDocspec/: Cpp.hs  Diff.hs  ExprVars.hs  GHCi.hs  Lexer.hs  Library.hs  Located.hs  Main.hs  Man.hs  Opts.hs  Package.hs  Phase1.hs  Phase2.hs  Summary.hs  Trace.hs  Warning.hs
cabal-docspec/src/CabalDocspec/Doctest/: Example.hs  Extract.hs  Parse.hs
cabal-docspec/src/CabalDocspec/Man/: Content.hs
cabal-docspec/src/System/Process/: Interactive.hs
cabal-docspec/tests/: tests.hs
cabal-env/: cabal-env.cabal
cabal-env/cli/: Main.hs
cabal-env/src/CabalEnv/: Environment.hs  FakePackage.hs  GHC.hs  Main.hs  Prelude.hs  Utils.hs  Warning.hs
cabal-haddock-server/: README.md  cabal-haddock-server.cabal
cabal-haddock-server/cli/: Main.hs
cabal-haddock-server/src/CabalHaddockServer/: DocsContents.hs  Hoogle.hs  Main.hs  Options.hs  Routes.hs  Static.hs  TopPage.hs  Wai.hs  Warning.hs
cabal-haddock-server/src/CabalHaddockServer/Pages/: Error.hs  Index.hs  NotFound.hs  Package.hs  Redirect.hs  Search.hs
cabal-hasklint/: .gitignore  Changelog.md  cabal-hasklint.cabal
cabal-hasklint/cli/: Main.hs
cabal-hasklint/cpphs/Language/Preprocessor/: Cpphs.hs
cabal-hasklint/cpphs/Language/Preprocessor/Cpphs/: CppIfdef.hs
cabal-hasklint/src/CabalHasklint/: Cpp.hs  Lint.hs  Main.hs  Opts.hs  Package.hs  Parse.hs  Trace.hs  Warning.hs
cabal-hasklint/src/CabalHasklint/GHC/: Utils.hs
cabal-hasklint/tests/: tests.hs
cabal-hie/: cabal-hie.cabal
cabal-hie/cli/: Main.hs
cabal-hie/src/CabalHie/: Main.hs
cabal-iface-query/: cabal-iface-query.cabal
cabal-iface-query/cli/: Main.hs
cabal-iface-query/src/CabalIfaceQuery/: GHC.hs  Main.hs
cabal-iface-query/src/CabalIfaceQuery/GHC/: All.hs  DynFlags.hs  NameCacheUpdater.hs  ReadBinIface.hs  Show.hs
cabal-store-check/: cabal-store-check.cabal
cabal-store-check/cli/: Main.hs
cabal-store-check/src/CabalStoreCheck/: Main.hs
cabal-store-gc/: cabal-store-gc.cabal
cabal-store-gc/cli/: Main.hs
cabal-store-gc/src/CabalStoreGC/: Deps.hs  Main.hs
cabal-tags/: cabal-tags.cabal
cabal-tags/cli/: Main.hs
cabal-tags/src/: Hiero.hs
cabal-tags/src/CabalTags/: Main.hs  Tag.hs
cabal-tags/src/CabalTags/GHC/: All.hs
fragments/: boot-deps.fragment
paths-0.2.0.0/: ChangeLog.md  LICENSE  paths.cabal
paths-0.2.0.0/src/System/: Path.hs
paths-0.2.0.0/src/System/Path/: IO.hs  Internal.hs  Lens.hs  QQ.hs  Unsafe.hs
paths-0.2.0.0/src/System/Path/Internal/: Compat.hs  Native.hs
peura/: peura.cabal
peura/src/: Peura.hs
peura/src/Peura/: Async.hs  ByteString.hs  Cabal.hs  Debug.hs  Exports.hs  GHC.hs  Glob.hs  Monad.hs  Orphans.hs  Paths.hs  Process.hs  Run.hs  Serialise.hs  Temporary.hs  Trace.hs  Tracer.hs  Warning.hs
peura/test/: TestProcess.hs  Tests.hs
