cabal-version:      2.2
name:               cabal-bundler
version:            0.1
synopsis:
  Bundle cabal packages for installation in different environments.

category:           Development
description:
  Bundle cabal packages for installation in different environments.
  Supported variants:
  .
  * `nix-single`: A single Nix-derivation 

license:            GPL-3.0-or-later AND BSD-3-Clause
license-file:       LICENSE
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
tested-with:        GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.1
extra-source-files: Changelog.md

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-extras

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
    CabalBundler
    CabalBundler.NixBase32

  other-modules:    Paths_cabal_bundler
  autogen-modules:  Paths_cabal_bundler

  build-depends:
    , base <5
    , bytestring
    , Cabal                  ^>=3.0
    , cabal-install-parsers
    , cabal-plan
    , containers
    , filepath
    , optparse-applicative
    , text
    , topograph
    , vector
    , zinza

-- todo executable
