cabal-version:      2.2
name:               cabal-deps
version:            0.1
synopsis:           Check that dependencies are up to date
category:           Development
description:
  Check the project or package(s) dependencies are up to date.

license:            GPL-2.0-or-later
license-files:      LICENSE LICENSE.GPLv2 LICENSE.GPLv3
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.2
extra-source-files: Changelog.md

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-extras.git

library cabal-deps-internal
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  CabalDeps.Main
  other-modules:    Paths_cabal_deps
  autogen-modules:  Paths_cabal_deps

  -- ghc-boot dependencies
  build-depends:
    , base        ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0
    , bytestring  ^>=0.10.8.2
    , containers  ^>=0.5.10.2 || ^>=0.6.0.1
    , deepseq     ^>=1.4.3.0
    , directory   ^>=1.3.0.2
    , filepath    ^>=1.4.1.2
    , mtl         ^>=2.2.2
    , parsec      ^>=3.1.13.0
    , pretty      ^>=1.1.3.3
    , process     ^>=1.6.1.0
    , text        ^>=1.2.3.0

  -- We use Cabal-3.4
  build-depends:    Cabal ^>=3.4

  -- We also use peura
  build-depends:    peura

  -- dependencies in library
  build-depends:
    , ansi-terminal
    , cabal-install-parsers
    , cabal-plan
    , optparse-applicative

executable cabal-deps
  default-language: Haskell2010
  hs-source-dirs:   cli
  main-is:          Main.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N2
  build-depends:
    , base
    , cabal-deps-internal
