cabal-version:      2.2
name:               cabal-deps
version:            0.1
synopsis:           Check that dependencies are up to date
category:           Development
description:
  Check the project or package(s) dependencies are up to date.

license:            GPL-2.0-or-later
license-files:
  LICENSE
  LICENSE.GPLv2
  LICENSE.GPLv3

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
tested-with:        GHC ==9.8.2
extra-source-files: Changelog.md

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-extras.git

library cabal-deps-internal
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  CabalDeps.Main
  other-modules:    Paths_cabal_deps
  autogen-modules:  Paths_cabal_deps

  -- ghc-boot dependencies
  -- cabal-fmt: fragment ../fragments/boot-deps.fragment
  build-depends:
    , base              ^>=4.19.0.0
    , binary            ^>=0.8.9.0
    , bytestring        ^>=0.12.0.2
    , containers        ^>=0.6.8
    , deepseq           ^>=1.5.0.0
    , directory         ^>=1.3.8.1
    , filepath          ^>=1.4.100.4
    , mtl               ^>=2.3.1
    , parsec            ^>=3.1.17.0
    , pretty            ^>=1.1.3.6
    , process           ^>=1.6.18.0
    , stm               ^>=2.5.0.0
    , template-haskell
    , text              ^>=2.1

  -- We use Cabal-3.10
  build-depends:    Cabal ^>=3.10.3.0

  -- We also use peura
  build-depends:    peura

  -- dependencies in library
  build-depends:
    , ansi-terminal
    , cabal-install-parsers
    , cabal-plan
    , optparse-applicative

executable cabal-deps
  default-language: Haskell2010
  hs-source-dirs:   cli
  main-is:          Main.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N2
  build-depends:
    , base
    , cabal-deps-internal
