cabal-version:      2.4
name:               cabal-diff
version:            0.1
synopsis:           Compare API of cabal packages
category:           Development
description:
  Compare API of cabal packages. Like @hackage-diff@ but uses
  @cabal v2-build@ functionality.

license:            GPL-2.0-or-later
license-file:       LICENSE
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
tested-with:        GHC ==9.8.2
extra-source-files:
  Changelog.md
  fixtures/*.golden
  fixtures/*.txt

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-extras.git

library cabal-diff-internal
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
    CabalDiff.Diff
    CabalDiff.Hoogle
    CabalDiff.Main

  other-modules:    Paths_cabal_diff
  autogen-modules:  Paths_cabal_diff

  -- ghc-boot dependencies
  -- cabal-fmt: fragment ../fragments/boot-deps.fragment
  build-depends:
    , base              ^>=4.19.0.0
    , binary            ^>=0.8.9.0
    , bytestring        ^>=0.12.0.2
    , containers        ^>=0.6.8
    , deepseq           ^>=1.5.0.0
    , directory         ^>=1.3.8.1
    , filepath          ^>=1.4.100.4
    , mtl               ^>=2.3.1
    , parsec            ^>=3.1.17.0
    , pretty            ^>=1.1.3.6
    , process           ^>=1.6.18.0
    , stm               ^>=2.5.0.0
    , template-haskell
    , text              ^>=2.1

  -- We use Cabal-3.10
  build-depends:    Cabal ^>=3.10.3.0

  -- We also use peura
  build-depends:    peura

  -- dependencies in library
  build-depends:
    , ansi-terminal          ^>=1.1
    , base16-bytestring      ^>=1.0.0.0
    , cabal-install-parsers
    , cabal-plan
    , cryptohash-sha256      ^>=0.11.101.0
    , Glob                   ^>=0.10.0
    , optparse-applicative   ^>=0.18.0.0
    , semialign              ^>=1.3
    , stm
    , these                  ^>=1.2

executable cabal-diff
  default-language: Haskell2010
  hs-source-dirs:   cli
  main-is:          Main.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N2
  build-depends:
    , base
    , cabal-diff-internal

test-suite cabal-diff-golden
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Golden.hs
  hs-source-dirs:   test

  -- inherited constraints
  build-depends:
    , ansi-terminal
    , base
    , bytestring
    , Cabal
    , cabal-diff-internal
    , containers
    , directory
    , filepath

  -- dependencies needing explicit constraints
  build-depends:
    , tasty         ^>=1.5
    , tasty-golden  ^>=2.3.1.1
    , tree-diff     ^>=0.3
