cabal-version:      2.2
name:               cabal-env
version:            0.1
synopsis:           Manage GHC package-environments with cabal-install
category:           Development
description:
  GHC-8.0 support package environment files.
  Those could be used to view parts of global @cabal-install@ package store.
  .
  Tuned for Oleg's preference, but has some knobs still.

license:            GPL-2.0-or-later
license-files:
  LICENSE
  LICENSE.GPLv2
  LICENSE.GPLv3

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
tested-with:        GHC ==9.8.2
extra-source-files: Changelog.md

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-extras.git

library cabal-env-internal
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  exposed-modules:
    CabalEnv.Environment
    CabalEnv.Main
    CabalEnv.Warning

  other-modules:      Paths_cabal_env
  autogen-modules:    Paths_cabal_env

  -- ghc-boot dependencies
  -- cabal-fmt: fragment ../fragments/boot-deps.fragment
  build-depends:
    , base              ^>=4.19.0.0
    , binary            ^>=0.8.9.0
    , bytestring        ^>=0.12.0.2
    , containers        ^>=0.6.8
    , deepseq           ^>=1.5.0.0
    , directory         ^>=1.3.8.1
    , filepath          ^>=1.4.100.4
    , mtl               ^>=2.3.1
    , parsec            ^>=3.1.17.0
    , pretty            ^>=1.1.3.6
    , process           ^>=1.6.18.0
    , stm               ^>=2.5.0.0
    , template-haskell
    , text              ^>=2.1

  -- We use Cabal-3.12
  build-depends:      Cabal ^>=3.12.1.0

  -- We also use peura
  build-depends:      peura

  -- dependencies in library
  build-depends:
    , aeson                  ^>=2.2.1.0
    , base16-bytestring      ^>=1.0.0.0
    , base64-bytestring      ^>=1.2.0.0
    , cabal-install-parsers  ^>=0.6
    , cabal-plan             ^>=0.7.0.0
    , cryptohash-sha256      ^>=0.11.101.0
    , generic-lens-lite      ^>=0.1
    , Glob                   ^>=0.10.0
    , lzma                   ^>=0.0.0.3
    , optparse-applicative   ^>=0.18.0.0

  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

executable cabal-env
  default-language: Haskell2010
  hs-source-dirs:   cli
  main-is:          Main.hs
  ghc-options:      -Wall -threaded
  build-depends:
    , base
    , cabal-env-internal
