cabal-version:      2.2
name:               cabal-haddock-server
version:            0.1
synopsis:           Spawn a web server providing haddocks docs tarballs
category:           Development
description:        Spawn a web server providing haddocks docs tarballs.
license:            GPL-2.0-or-later
license-files:
  LICENSE
  LICENSE.GPLv2
  LICENSE.GPLv3

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
tested-with:        GHC ==8.10.7
extra-source-files:
  Changelog.md
  static/bootstrap.min.css

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-extras.git
  subdir:   cabal-haddock-server

library cabal-haddock-server-internal
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall

  -- main module separately
  exposed-modules:    CabalHaddockServer.Main
  exposed-modules:
    CabalHaddockServer.DocsContents
    CabalHaddockServer.Options
    CabalHaddockServer.Pages.Error
    CabalHaddockServer.Pages.Index
    CabalHaddockServer.Pages.NotFound
    CabalHaddockServer.Pages.Package
    CabalHaddockServer.Pages.Redirect
    CabalHaddockServer.Pages.Search
    CabalHaddockServer.Routes
    CabalHaddockServer.Static
    CabalHaddockServer.TopPage
    CabalHaddockServer.Wai
    CabalHaddockServer.Warning

  -- ghc-boot dependencies
  -- cabal-fmt: fragment ../fragments/boot-deps.fragment
  build-depends:
    , base              ^>=4.14.0.0
    , binary            ^>=0.8.8.0
    , bytestring        ^>=0.10.12.0
    , containers        ^>=0.6.5.1
    , deepseq           ^>=1.4.4.0
    , directory         ^>=1.3.6.0
    , filepath          ^>=1.4.2.1
    , mtl               ^>=2.2.2
    , parsec            ^>=3.1.14.0
    , pretty            ^>=1.1.3.6
    , process           ^>=1.6.13.2
    , stm               ^>=2.5.0.0
    , template-haskell
    , text              ^>=1.2.4.1

  -- We use Cabal-3.6
  build-depends:      Cabal ^>=3.8.1.0

  -- We also use peura
  build-depends:      peura

  -- hooglite is not (yet?) on Hackage
  build-depends:      hooglite

  -- dependencies in library
  build-depends:
    , aeson                  ^>=2.1.1.0
    , base16-bytestring      ^>=1.0.0.0
    , cabal-install-parsers  ^>=0.6
    , cryptohash-sha256      ^>=0.11.101.0
    , file-embed-lzma
    , haskell-lexer
    , http-types             ^>=0.12.3
    , lucid                  ^>=2.9.12
    , optparse-applicative   ^>=0.17.0.0
    , tar                    ^>=0.5.1.1
    , time-manager           ^>=0.0.0
    , wai                    ^>=3.2.3
    , warp                   ^>=3.3.17
    , zlib                   ^>=0.6.2.3

  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

executable cabal-haddock-server
  default-language: Haskell2010
  hs-source-dirs:   cli
  main-is:          Main.hs
  ghc-options:      -Wall -threaded
  build-depends:
    , base
    , cabal-haddock-server-internal
