cabal-version:      2.2
name:               cabal-hasklint
version:            0.0.0.20211218
synopsis:           Another linter
category:           Development
description:
  The @cabal-haskelint@ is different from e.g. HLint or stan
  as it takes into account cabal file information.
  .
  This is proof of concept, and currently it only lints for unqualified
  imports, yet allowing package own modules to be imported unqualified.

license:            GPL-2.0-or-later
license-files:
  LICENSE
  LICENSE.GPLv2
  LICENSE.GPLv3

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
tested-with:        GHC ==9.2.5
extra-source-files: Changelog.md

source-repository head
  type:     git
  location: https://github.com/phadej/cabal-extras.git
  subdir:   cabal-hasklint

library internal-cpphs
  default-language: Haskell2010
  hs-source-dirs:   cpphs
  build-depends:
    , base         >=4.13     && <5
    , directory    ^>=1.3.0.2
    , polyparse    ^>=1.13
    , time-compat  ^>=1.9.4

  exposed-modules:
    Language.Preprocessor.Cpphs
    Language.Preprocessor.Unlit

  other-modules:
    Language.Preprocessor.Cpphs.CppIfdef
    Language.Preprocessor.Cpphs.HashDefine
    Language.Preprocessor.Cpphs.MacroPass
    Language.Preprocessor.Cpphs.Options
    Language.Preprocessor.Cpphs.Position
    Language.Preprocessor.Cpphs.ReadFirst
    Language.Preprocessor.Cpphs.RunCpphs
    Language.Preprocessor.Cpphs.SymTab
    Language.Preprocessor.Cpphs.Tokenise

library cabal-hasklint-internal
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall

  -- Main module
  exposed-modules:    CabalHasklint.Main

  -- rest of the implementation
  exposed-modules:
    CabalHasklint.Cpp
    CabalHasklint.GHC.Utils
    CabalHasklint.Lint
    CabalHasklint.Opts
    CabalHasklint.Package
    CabalHasklint.Parse
    CabalHasklint.Trace
    CabalHasklint.Warning

  -- ghc-boot dependencies
  -- cabal-fmt: fragment ../fragments/boot-deps.fragment
  build-depends:
    , base              ^>=4.16.4.0
    , binary            ^>=0.8.9.0
    , bytestring        ^>=0.11.3.1
    , containers        ^>=0.6.5.1
    , deepseq           ^>=1.4.6.1
    , directory         ^>=1.3.6.2
    , filepath          ^>=1.4.2.2
    , mtl               ^>=2.2.2
    , parsec            ^>=3.1.14.0
    , pretty            ^>=1.1.3.6
    , process           ^>=1.6.16.0
    , stm               ^>=2.5.0.0
    , template-haskell
    , text              ^>=1.2.5.0

  -- We use Cabal-3.6
  build-depends:      Cabal ^>=3.8.1.0

  -- We also use peura
  build-depends:      peura

  -- vendored cpphs, so we can integrate warnings
  build-depends:      internal-cpphs

  -- dependencies in library
  build-depends:
    , ansi-terminal          ^>=0.11
    , async                  ^>=2.2.2
    , cabal-install-parsers  ^>=0.6
    , cabal-plan             ^>=0.7.0.0
    , ghc-lib-parser         ^>=9.4.4.20221225
    , ghc-lib-parser-ex      ^>=9.4.0.0
    , Glob                   ^>=0.10.0
    , optparse-applicative   ^>=0.17.0.0
    , splitmix               ^>=0.1.0.3
    , unliftio-core          ^>=0.2.0.1

  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

executable cabal-hasklint
  default-language: Haskell2010
  hs-source-dirs:   cli
  main-is:          Main.hs
  ghc-options:      -Wall -rtsopts -threaded
  build-depends:
    , base
    , cabal-hasklint-internal
